--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,7 +1,15 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+ one:
+   id: 1
+   category_name: category1
+   created_at: <%= 5.days.ago.to_s :db  %>
+   updated_at: <%= 4.days.ago.to_s :db  %>
+   user_id: 1
+
+ two:
+   id: 2
+   category_name: category1
+   created_at: <%= 2.days.ago.to_s :db  %>
+   updated_at: <%= 1.days.ago.to_s :db  %>
+   user_id: 2
