--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -1,7 +1,28 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+one:
+  id: 1
+  user_id: 1
+  title: title1
+  description: description1
+  status: new
+  created_at: <%= 5.days.ago.to_s :db  %>
+  category_id: 1
+
+two:
+  id: 2
+  user_id: 1
+  title: title2
+  description: description2
+  status: new
+  created_at: <%= 2.days.ago.to_s :db  %>
+  category_id: 1
+
+three:
+  id: 3
+  user_id: 1
+  title: title3
+  description: description2
+  status: new
+  created_at: <%= 3.days.ago.to_s :db  %>
+  category_id: 1
