--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,12 @@ test:
   pool: 5
   timeout: 5000
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+production:
+  adapter: mysql
+  database: user_base_development
+  host: localhost
+  user: root
+  password: password
+  pool: 5
+  timeout: 5000
 
